# Pong

./: CMakeLists.txt
include/: ball.h  collider.h  computerplayer.h  entity.h  game.h  gamecontroller.h  gameinfo.h  gamemanager.h  ibotstrategy.h  player.h  pong.h
include/BotStrategies/: botstrategies.h  botstrategycomputecenter.h  botstrategycomputelinesintersection.h  botstrategysimple.h  botstrategysmart.h
include/UI/: button.h  gameview.h  menu.h
src/: ball.cpp  collider.cpp  computerplayer.cpp  entity.cpp  game.cpp  gamecontroller.cpp  gameinfo.cpp  gamemanager.cpp  ibotstrategy.cpp  main.cpp  player.cpp  pong.cpp
src/BotStrategies/: botstrategycomputecenter.cpp  botstrategycomputelinesintersection.cpp  botstrategysimple.cpp  botstrategysmart.cpp
src/UI/: button.cpp  gameview.cpp  menu.cpp
